--- a/index.html
+++ b/index.html
@@ -31,19 +31,22 @@
 <body>
     <header>
         <div class='header'>
-            <a href='/' class='titletext'>
+
+            <a href='buss://herman.fr/' class='titletext'>
                 <h1>This is Herman (fr fr)</h1>
             </a>
             <nav aria-label='site'>
                 <ul>
                     <li>
-                        <a href='/'>Home</a>
+                        <a href='buss://herman.fr/'>Home</a>
                     </li>
                     <li>
-                        <a href='/blog/'>Blog</a>
+                        <a href='buss://herman.fr/blog/'>Blog</a>
                     </li>
                 </ul>
             </nav>
+
+
         </div>
     </header>
 
