add: empty script.lua

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href='/normalmagick.css'>
 
     <!-- Lua -->
-    <!-- <script src="script.lua" /> -->
+    <script src="script.lua"/>
 
 
 </head>
