remove: extra forward slash in assets

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <!-- Favicon -->
 
-    <link href="/favicon.ico"><!-- CSS -->
-    <link href='/normalmagick.css'>
+    <link href="favicon.ico"><!-- CSS -->
+    <link href='normalmagick.css'>
 
     <!-- Lua -->
-    <script src="script.lua"/>
+    <script src="script.lua" />
 
 
 </head>
