--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Favicon -->
 
     <link href="favicon.ico"><!-- CSS -->
-    <link href='normalmagick.css'>
+    <link href='normalize.css'>
 
     <!-- Lua -->
     <script src="script.lua" />
