remove: header, main, footer tags

--- a/index.html
+++ b/index.html
@@ -23,42 +23,40 @@
     <link href='normalize.css'>
 
     <!-- Lua -->
-    <script src="script.lua" />
+    <script src="script.lua"/>
 
 
 </head>
 
 <body>
-    <header>
-        <div class='header'>
+    <div class='header'>
 
-            <a href='buss://herman.fr/' class='titletext'>
-                <h1>This is Herman (fr fr)</h1>
-            </a>
-            <nav aria-label='site'>
-                <ul>
-                    <li>
-                        <a href='buss://herman.fr/'>Home</a>
-                    </li>
-                    <li>
-                        <a href='buss://herman.fr/blog/'>Blog</a>
-                    </li>
-                </ul>
-            </nav>
+        <a href='buss://herman.fr/' class='titletext'>
+            <h1>This is Herman (fr fr)</h1>
+        </a>
+        <nav aria-label='site'>
+            <ul>
+                <li>
+                    <a href='buss://herman.fr/'>Home</a>
+                </li>
+                <li>
+                    <a href='buss://herman.fr/blog/'>Blog</a>
+                </li>
+            </ul>
+        </nav>
 
 
-        </div>
-    </header>
+    </div>
 
-    <main>
+    <div class='main'>
         <h1>A WEBXITE enters the fray</h1>
         <p>This is a new website, and it's going to be great. Feel this moment, feel it in your bones.
             Just you wait and see. We're still in the brainstorming phase, but we're going to have a lot of fun.</p>
         <p>For now, we're experimenting if we can use a static site generator to build this website.
             We're using <a href="https://getzola.org">Zola</a> for now.</p>
-    </main>
-    <footer>
-    </footer>
+    </div>
+    <div class='footer'>
+    </div>
 </body>
 
 </html>
