redo from scratch

--- a/index.html
+++ b/index.html
@@ -1,61 +1,38 @@
-<!DOCTYPE html>
-<html lang='en'>
+<html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta http-equiv='content-type' content='text/html; charset=utf-8'>
-
-    <!-- Enable responsiveness on mobile devices-->
-    <!-- viewport-fit=cover is to support iPhone X rounded corners and notch in landscape, maximum-scale=1-->
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-
     <!-- SEO Title and Description -->
     <meta name='title' content='This is Herman (fr fr)'>
     <meta name='description' content='A site on the bussin&#x27; webx.'>
 
-    <!-- Title -->
+    <meta name="theme-color" content="#01a437">
+
     <title>This is Herman (fr fr)</title>
 
-    <!-- Favicon -->
-
-    <link href="favicon.ico"><!-- CSS -->
-    <link href='normalize.css'>
-
-    <!-- Lua -->
-    <script src="script.lua"/>
-
-
+    <link href="favicon.ico">
+    <link href="styles.css">
+    <script src="script.lua" />
 </head>
 
 <body>
-    <div class='header'>
-
-        <a href='buss://herman.fr/' class='titletext'>
-            <h1>This is Herman (fr fr)</h1>
-        </a>
-        <nav aria-label='site'>
-            <ul>
-                <li>
-                    <a href='buss://herman.fr/'>Home</a>
-                </li>
-                <li>
-                    <a href='buss://herman.fr/blog/'>Blog</a>
-                </li>
-            </ul>
-        </nav>
-
-
+    <div class="main">
+        <h1>This is Herman (fr fr)</h1>
+        <br>
+        <h2>Another WEBXITE enters the fray!</h2>
+        <p>
+            This is a new website, and it's going to be great.
+            Feel this moment, feel it in your bones.
+            Just you wait and see.
+            We're still in the brainstorming phase, but we're going to have a lot of fun.
+        </p>
+        <p>
+            For now, we're handwriting the HTML, but hopefully we're going to switch to a static site generator soon.
+            There's a lot of incompatible stuff with CSS3 and missing features in HTML++, so we're going to have to work
+            around that.
+            Links to other subpages won't probably be clickable.
+        </p>
     </div>
-
-    <div class='main'>
-        <h1>A WEBXITE enters the fray</h1>
-        <p>This is a new website, and it's going to be great. Feel this moment, feel it in your bones.
-            Just you wait and see. We're still in the brainstorming phase, but we're going to have a lot of fun.</p>
-        <p>For now, we're experimenting if we can use a static site generator to build this website.
-            We're using <a href="https://getzola.org">Zola</a> for now.</p>
-    </div>
-    <div class='footer'>
+    <div class="footer">
     </div>
 </body>
 
