--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
             around that.
             Links to other subpages won't probably be clickable.
         </p>
+        <p>
+            Moreover, head on over to <a href="buss://register.it>">register.it</a> to get your own domain.
+            As well as to <a href="buss://dingle.it">dingle.it</a> for the search engine.
+            The links for WebX references are as follows:
+        <ul>
+            <li>The <a href="https://www.youtube.com/watch?v=qiOtinFFfk8">YouTube video</a> by FaceDev about the
+                project.</li>
+            <li>The <a href="https://github.com/face-hh/webx">GitHub repository</a>where the source code and some
+                documentation live.</li>
+            <li>The <a href="https://facedev.gitbook.io/bussin-web-x-how-to-make-a-website">website for the
+                    Documentation</a> where things are discused in more depth.</li>
+        </ul>
+        </p>
     </div>
     <div class="footer">
     </div>
