add: PS message

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="main">
-        <h1>This is Herman (fr fr)</h1>
+        <h1>This is herman (fr fr)</h1>
         <br>
         <h2>Another WEBXITE enters the fray!</h2>
         <p>
@@ -43,6 +43,12 @@
             <li>The <a href="https://facedev.gitbook.io/bussin-web-x-how-to-make-a-website">website for the
                     Documentation</a> where things are discused in more depth.</li>
         </ul>
+        </p>
+        <p>
+            P.S. I am her-man fr fr. The domain says so as well. And this is irrefutable proof.
+        </p>
+        <p>
+            P.S.S. I am not a robot.
         </p>
     </div>
     <div class="footer">
