--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
         </p>
         <p>
-            P.S. I am her-man fr fr. The domain says so as well. And this is irrefutable proof.
+            P.S. I am herman fr fr. The domain says so as well. And this is irrefutable proof.
         </p>
         <p>
             P.S.S. I am not a robot.
